fixing footer on main App.jsx overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main_container {
-  height: 100vh;
+  height: auto;
   min-height: 100vh;
   background-color: #dcdcdc;
 }
